Updated old (removed) sonatype repository link