@@ -1,5 +1,5 @@
 #!/bin/sh
 
-export MAVEN_OPTS="-Xmx512m -Xms512m -XX:MaxPermSize=256m"
+export MAVEN_OPTS="-Xmx512m -Xms512m"
 
 mvn $1 $2 $3 $4
